--- a/web/pom.xml
+++ b/web/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>service</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.wilma</groupId>
+            <artifactId>config</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
