Initial controllers and exception handling

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -7,4 +7,8 @@ spring:
     name: Work Integrated Learning Management Application - WILMA
 
   profiles:
-    active: prod # Set this as either dev or prod
+    active: dev # Set this as either dev or prod
+
+api:
+  v1.context-path: /api/v1
+  v2.context-path: /api/v2
