--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /repository/target/
 /service/target/
 /web/target/
+/config/target/
 
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
@@ -38,6 +39,3 @@ build/
 
 ### VS Code ###
 .vscode/
-
-DB_INFO.md
-ignored/
