Added smtp mail configuration and tests

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<!-- Embedded database for development purposes -->
 		<dependency>
 			<groupId>com.h2database</groupId>
