--- a/web/src/test/resources/application.yml
+++ b/web/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 ### Common ###
 module:
-  name: WEB
+  name: TEST
 
 spring:
   application:
@@ -16,17 +16,6 @@ spring:
     port: 587
     username: projectwilma@mail.com
     password: njYDR2S9ZCQKIkf5
-
-  http:
-    multipart:
-      upload-path: web/src/main/resources/uploads/
-
-  servlet:
-    multipart:
-      enabled: true
-      file-size-threshold: 10MB
-      max-file-size: 10MB
-      max-request-size: 10MB
 
 api:
   v1.context-path: /api/v1
