--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -4,6 +4,7 @@ module:
 
 spring:
   application:
+    view-attachment-path: "http://localhost:8080/api/v1/partners/view-attachment/"
     name: Work Integrated Learning Management Application - WILMA
 
   profiles:
