Add Email Functionality to Contact Us Form

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: wilmaproject.dev@gmail.com
-    password: bditlkfcuotzojpu
+    password: qxnxokfdfwhqbnfd
     properties:
       mail:
         smtp:
