Updated tests to include recent data & dependencies

--- a/web/src/test/resources/application-dev.yml
+++ b/web/src/test/resources/application-dev.yml
@@ -4,11 +4,7 @@ spring:
 
   profiles:
     profile-name: DEV
-
-  security:
-    user:
-      name: educator
-      password: educator
+    dev-username: partner
 
   h2:
     console:
@@ -30,13 +26,3 @@ spring:
     password:
     url: jdbc:h2:mem:test_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
-  http:
-    multipart:
-      upload-path: web/src/main/resources/uploads/
-
-  servlet:
-    multipart:
-      enabled: true
-      file-size-threshold: 10MB
-      max-file-size: 10MB
-      max-request-size: 10MB
